--- a/quickstart/src/tsconfig.json
+++ b/quickstart/src/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
+    "outDir": "build",
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": [ "es2015", "dom" ],
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   }
